# typewriter-art

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  typewriter_art.py
fonts/: ctrld-fixed-16b.pbm  ctrld-fixed-16b.pil  unscii-16.pil
fonts/Tecate/: LICENSE.md  spleen-8x16.pbm  unscii-16.pbm
pictures/: Persian_Cat.txt
pictures/Bob_Neill/: LICENSE.md
