[tool.poetry]
name = "typewriter_art"
version = "0.1.0"
description = "A Python program for printing typewriter art."
authors = ["Garrett Hyde <github@garretthyde.com>"]
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/ghyde/typewriter-art"

[tool.poetry.dependencies]
python = "^3.8"
Click = "^8.0"
Pillow = "^10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
